OO-5255: update Infinispan, Assert-J, MysQL driver